--- a/room301.xaml
+++ b/room301.xaml
@@ -5,25 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:STI_ONN"
         mc:Ignorable="d"
-        Title="room301" Height="465" Width="809"
+        Title="room301" Height="585" Width="828"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize">
 
     <Grid Background="#FFEAF2FF">
-        <DataGrid x:Name="excelDataGrid" Margin="45,49,45,53" HeadersVisibility="None" AutoGenerateColumns="False" Width="719" IsReadOnly="True">
+        <DataGrid x:Name="excelDataGrid" Margin="19,49,19,53" HeadersVisibility="None" AutoGenerateColumns="False" IsReadOnly="True" Width="790">
             <DataGrid.CellStyle>
                 <Style TargetType="DataGridCell">
                     <Setter Property="Background" Value="#FFF2CC"/>
                     <Setter Property="Foreground" Value="Black"/>
                     <!-- Default text color -->
                     <Style.Triggers>
-                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Column.DisplayIndex}" Value="0">
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=DataGridRow}, Path=Header}" Value="0">
                             <Setter Property="Background" Value="#305496"/>
                             <Setter Property="Foreground" Value="White"/>
                             <!-- Change text color to white for cells in the first column -->
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Row.DisplayIndex}" Value="0">
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Column.DisplayIndex}" Value="0">
                             <Setter Property="Background" Value="#305496"/>
                             <Setter Property="Foreground" Value="White"/>
                             <!-- Change text color to white for cells in the first row -->
@@ -38,16 +38,16 @@
                 </Style>
             </DataGrid.Resources>
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Column1" Binding="{Binding Column1}" Width="100" ElementStyle="{StaticResource CenteredText}" />
-                <DataGridTextColumn Header="Column2" Binding="{Binding Column2}" Width="100" ElementStyle="{StaticResource CenteredText}" />
-                <DataGridTextColumn Header="Column3" Binding="{Binding Column3}" Width="100" ElementStyle="{StaticResource CenteredText}" />
-                <DataGridTextColumn Header="Column4" Binding="{Binding Column4}" Width="100" ElementStyle="{StaticResource CenteredText}" />
-                <DataGridTextColumn Header="Column5" Binding="{Binding Column5}" Width="100" ElementStyle="{StaticResource CenteredText}" />
-                <DataGridTextColumn Header="Column6" Binding="{Binding Column6}" Width="100" ElementStyle="{StaticResource CenteredText}" />
-                <DataGridTextColumn Header="Column7" Binding="{Binding Column7}" Width="100" ElementStyle="{StaticResource CenteredText}" />
+                <DataGridTextColumn Header="Column1" Binding="{Binding Column1}" Width="110" ElementStyle="{StaticResource CenteredText}" />
+                <DataGridTextColumn Header="Column2" Binding="{Binding Column2}" Width="110" ElementStyle="{StaticResource CenteredText}" />
+                <DataGridTextColumn Header="Column3" Binding="{Binding Column3}" Width="110" ElementStyle="{StaticResource CenteredText}" />
+                <DataGridTextColumn Header="Column4" Binding="{Binding Column4}" Width="110" ElementStyle="{StaticResource CenteredText}" />
+                <DataGridTextColumn Header="Column5" Binding="{Binding Column5}" Width="110" ElementStyle="{StaticResource CenteredText}" />
+                <DataGridTextColumn Header="Column6" Binding="{Binding Column6}" Width="110" ElementStyle="{StaticResource CenteredText}" />
+                <DataGridTextColumn Header="Column7" Binding="{Binding Column7}" Width="110" ElementStyle="{StaticResource CenteredText}" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button Content="Close" Click="CloseButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,417,19,0" Height="44" Width="72" FontSize="18" FontFamily="Arial" FontWeight="Bold" BorderBrush="{x:Null}" Background="#FF305496" Foreground="White">
+        <Button Content="Close" Click="CloseButton_Click" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,537,19,0" Height="44" Width="72" FontSize="18" FontFamily="Arial" FontWeight="Bold" BorderBrush="{x:Null}" Background="#FF305496" Foreground="White">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="20"/>
